--- a/src/main/webapp/i18n/fr/mbe.json
+++ b/src/main/webapp/i18n/fr/mbe.json
@@ -18,10 +18,10 @@
         "title": "Mbe"
       },
       "id": "ID",
-      "socketCpu": "Socket Cpu",
-      "ramType": "Ram Type",
-      "ramFrequencyMax": "Ram Frequency Max",
-      "ramSizeMax": "Ram Size Max",
+      "socketCpu": "Socket du Cpu",
+      "ramType": "Type de Ram",
+      "ramFrequencyMax": "Ram Frequence Max MHz",
+      "ramSizeMax": "Ram Size Max Go",
       "pciOutputs": "Pci Outputs",
       "displayOutput": "Display Output",
       "storageOutput": "Storage Output",
