fin d'implémentation list enum pour ventirad et computer case

--- a/src/main/webapp/i18n/fr/ventirad.json
+++ b/src/main/webapp/i18n/fr/ventirad.json
@@ -19,6 +19,7 @@
       },
       "id": "ID",
       "rangeFanSpeed": "Vitesse de rotation tours/min",
+      "sockets": "Sockets compatibles",
       "noise": "Bruits Db",
       "hasThermalPaste": "Pâte thermique inclu",
       "dimension": "Dimension"
