--- a/src/main/webapp/i18n/fr/mbe.json
+++ b/src/main/webapp/i18n/fr/mbe.json
@@ -20,13 +20,13 @@
       "id": "ID",
       "socketCpu": "Socket du Cpu",
       "ramType": "Type de Ram",
-      "ramFrequencyMax": "Ram Frequence Max MHz",
-      "ramSizeMax": "Ram Size Max Go",
-      "pciOutputs": "Pci Outputs",
-      "displayOutput": "Display Output",
-      "storageOutput": "Storage Output",
+      "ramFrequencyMax": "Ram Fréquence Max",
+      "ramSizeMax": "Ram Capacité Max",
+      "pciOutputs": "PCI Outputs",
+      "displayOutput": "Display Outputs",
+      "storageOutput": "Storage Outputs",
       "insideIO": "Inside IO",
-      "backPanelOutput": "Back Panel Output",
+      "backPanelOutput": "Back Panel Outputs",
       "bios": "Bios",
       "format": "Format"
     }
