--- a/src/main/webapp/i18n/fr/ventirad.json
+++ b/src/main/webapp/i18n/fr/ventirad.json
@@ -18,10 +18,10 @@
         "title": "Ventirad"
       },
       "id": "ID",
-      "rangeFanSpeed": "Vitesse de rotation tours/min",
+      "rangeFanSpeed": "Vitesse de rotation",
       "sockets": "Sockets compatibles",
-      "noise": "Bruits Db",
-      "hasThermalPaste": "Pâte thermique inclu",
+      "noise": "Bruits",
+      "hasThermalPaste": "Pâte thermique inclue",
       "dimension": "Dimension"
     }
   }
