Ajout de la dimension sur les psu

--- a/src/main/webapp/i18n/fr/psu.json
+++ b/src/main/webapp/i18n/fr/psu.json
@@ -23,7 +23,8 @@
       "modularity": "Modularité",
       "nbSata": "Nombre de sortie Sata",
       "nbPciE": "Nombre de sortie PciExpress",
-      "outputs": "Outputs"
+      "outputs": "Outputs",
+      "dimension": "Dimension"
     }
   }
 }
